--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,10 @@
 FROM golang:1.21.0
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/server
 
 RUN go install github.com/cosmtrek/air@latest
 
 # Copy all files in host dir to container
-COPY . .
-# Ensure all required packeges properly installed
+COPY ./server .
+
 RUN go mod tidy
