--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,27 @@
 version: '3.8'
 
 services:
-  web:
-    build: .
-    env_file: 
+  backend:
+    build: ./server
+    env_file:
       - .env
     ports:
+      # container:host
       - 3000:3000
     volumes:
-      - .:/usr/src/app
+      - ./server:/usr/src/app/server
     # Code below is executed upon launching the service
     # Will allow docker compose up to automatically start our main.go
     # "air" replaces "go run" for live updates
     command: air cmd/main.go -b 0.0.0.0
+  frontend:
+    build: ./client
+    ports:
+      # container:host
+      - 5173:5173
+    volumes:
+      - ./client:/usr/src/app/client
+    command: yarn dev --host
   db:
     image: postgres:alpine
     environment:
