Change Dockerfiles COPY command

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /usr/src/app/server
 RUN go install github.com/cosmtrek/air@latest
 
 # Copy all files in host dir to container
-COPY ./server .
+COPY . .
 
 RUN go mod tidy
