--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# Ignore docker errors
+tmp/*
+
 # Ignore all air builds
 server/tmp/*
 
