--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.19",
+    "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
     "@primer/octicons-react": "^19.7.0",
     "react": "^18.2.0",
