Checkpoint before universe refactor

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 DB_USER=umai
 DB_PASSWORD=umai
 DB_NAME=umai
+DB_PORT=5432
+DB_HOST=db
+
+PASS_SALT=NL^E>~46f/Vwp*DeXsT!
+
+JWT_SECRET=NL^E>~46f/Vwp*DeXsT!
+JWT_EXPIRY=30 #days
+JWT_MAXAGE=60 #days
